--- a/langchain.ipynb
+++ b/langchain.ipynb
@@ -5,9 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Langchain with AzureML\n",
-    "\n",
-    "Langchain has been very popular in the recent months and the community has been growing rapidly. Here are some tips and trick on how to work with langchain chains in AzureML."
+    "# Langchain with AzureML\n"
    ]
   },
   {
