--- a/langchain_notes.ipynb
+++ b/langchain_notes.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI Endpoint: https://aoai.openai.azure.com/\n",
+      "MLFlow Tracking URI:  azureml://eastus2.api.azureml.ms/mlflow/v1.0/subscriptions/15ae9cb6-95c1-483d-a0e3-b1a1a3b06324/resourceGroups/ray/providers/Microsoft.MachineLearningServices/workspaces/ray\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
@@ -44,9 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q: What did the large language model say when it was asked to tell a joke?\n",
+      "A: I'm sorry, I don't know any jokes yet. I'm still learning!\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
@@ -68,9 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I'm doing well, thank you for asking. How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import AzureChatOpenAI\n",
     "from langchain.schema import HumanMessage, SystemMessage\n",
@@ -99,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Business\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
@@ -126,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Business\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
@@ -157,9 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The answer is x = 4.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
@@ -174,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12/5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sympy import *\n",
     "x = symbols('x')\n",
@@ -185,9 +248,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Step 1: Add 7 to both sides of the equation.\n",
+      "3x - 7 + 7 = -2x + 5 + 7\n",
+      "\n",
+      "Step 2: Simplify the left side of the equation.\n",
+      "3x = -2x + 12\n",
+      "\n",
+      "Step 3: Subtract -2x from both sides of the equation.\n",
+      "3x - (-2x) = -2x + 12 - (-2x)\n",
+      "\n",
+      "Step 4: Simplify the left side of the equation.\n",
+      "5x = 12\n",
+      "\n",
+      "Step 5: Divide both sides of the equation by 5.\n",
+      "x = 12/5\n",
+      "\n",
+      "Step 6: Simplify the right side of the equation.\n",
+      "x = 2.4\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.llms import AzureOpenAI\n",
     "\n",
@@ -212,9 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nature's Nibbles.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chat_models import AzureChatOpenAI\n",
@@ -253,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +372,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m I need to know the interest rate of the bonds\n",
+      "Action: Search\n",
+      "Action Input: \"2 year government bond rate\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m2 Year Treasury Rate is at 4.08%, compared to 3.96% the previous market day and 2.47% last year. This is higher than the long term average of 3.16%. The 2 Year Treasury Rate is the yield received for investing in a US government issued treasury security that has a maturity of 2 years.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to calculate the amount of money I will have in 2 years\n",
+      "Action: Calculator\n",
+      "Action Input: 1000 * (1 + 0.0408)^2\u001b[0m\n",
+      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 1083.2646399999999\n",
+      "\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
+      "Final Answer: In two years, I will have 1083.26 dollars if I invest 1000 dollars in 2 year government bonds.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.agents import load_tools\n",
     "from langchain.agents import initialize_agent\n",
@@ -308,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,9 +465,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sourcefile': 'UI/2023-04-06_191207_UTC/simple-4000-100/how-to-create-attach-compute-cluster-0.md'}\n",
+      "\n",
+      "# Create an Azure Machine Learning compute cluster\n",
+      "\n",
+      "[!INCLUDE [dev v2](../../includes/machine-learning-dev-v2.md)]\n",
+      "\n",
+      "> [!div class=\"op_single_selector\" title1=\"Select the Azure Machine Learning CLI or SDK version you are using:\"]\n",
+      "> * [v1](v1/how-to-create-attach-compute-cluster.md)\n",
+      "> * [v2 (current \n",
+      "...\n",
+      "---------------------------------------\n",
+      "{'sourcefile': 'UI/2023-04-06_191207_UTC/simple-4000-100/how-to-manage-quotas-66.md'}\n",
+      "> To learn more about which VM family to request a quota increase for, check out [virtual machine sizes in Azure](../virtual-machines/sizes.md). For instance GPU VM families start with an \"N\" in their family name (eg. NCv3 series)\n",
+      "\n",
+      "The following table shows more limits in the platform. Reach out to \n",
+      "...\n",
+      "---------------------------------------\n",
+      "{'sourcefile': 'UI/2023-04-06_191207_UTC/simple-4000-100/how-to-configure-databricks-automl-environment-0.md'}\n",
+      "\n",
+      "# Set up a development environment with Azure Databricks and AutoML in Azure Machine Learning \n",
+      "\n",
+      "Learn how to configure a development environment in Azure Machine Learning that uses Azure Databricks and automated ML.\n",
+      "\n",
+      "Azure Databricks is ideal for running large-scale intensive machine learning workf\n",
+      "...\n",
+      "---------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "cog_search = CognitiveSearchRetriever(endpoint=os.getenv(\"COG_SEARCH_ENDPOINT\"), index_name=\"amldocs\", searchkey=os.environ[\"COG_SEARCH_KEY\"])\n",
     "docs = cog_search.get_relevant_documents(\"how to set up a compute cluster\")\n",
@@ -370,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,9 +542,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To set up a compute cluster in Azure Machine Learning workspace, you can follow the instructions given in the \"Create an Azure Machine Learning compute cluster\" article. This article provides step-by-step instructions on how to create and manage a compute cluster, and how to lower the compute cluster cost with low priority VMs. The article also explains how to set up a managed identity for the cluster. Here is the link to the article: \n",
+      "\n",
+      "https://docs.microsoft.com/en-us/azure/machine-learning/how-to-create-attach-compute-cluster?view=azure-ml-py.\n"
+     ]
+    }
+   ],
    "source": [
     "result = qa(\"how can I set up a compute cluster?\")\n",
     "mlflow.end_run()\n",
@@ -411,9 +573,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running offline, checking secrets\n",
+      "Q: how can I set up a compute cluster?\n",
+      "A: To set up a compute cluster, you can follow the instructions provided in the following Azure documentation:\n",
+      "\n",
+      "https://docs.microsoft.com/en-us/azure/machine-learning/how-to-create-attach-compute-cluster\n",
+      "\n",
+      "This documentation provides detailed guidance on how to create and manage a compute cluster in your Azure Machine Learning workspace. It describes how to use Compute Cluster to distribute a training or batch inference process across a cluster of CPU or GPU compute nodes in the cloud. It also outlines how to lower your compute cluster cost with low priority VMs and set up a managed identity for the cluster.\n"
+     ]
+    }
+   ],
    "source": [
     "!python src/langchain/rag_with_cog_search.py --question \"how can I set up a compute cluster?\" --top 3 "
    ]
@@ -432,9 +608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running offline, checking secrets\n",
+      "Q: how can I see the quota assigned to my workspace in the v2 cli?\n",
+      "A: To see the quota assigned to your workspace in the V2 CLI, you can run the following command:\n",
+      "\n",
+      "```\n",
+      "az ml workspace show-quota --workspace-name <workspace-name> --resource-group <resource-group-name>\n",
+      "```\n",
+      "\n",
+      "Make sure to replace <workspace-name> and <resource-group-name> with the appropriate values for your workspace.\n"
+     ]
+    }
+   ],
    "source": [
     "!python src/langchain/rag_with_cog_search.py --question \"how can I see the quota assigned to my workspace in the v2 cli?\""
    ]
@@ -488,9 +680,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running offline, checking secrets\n",
+      "{\n",
+      "    \"question\": \"how can I see the quota assigned to my workspace in the v2 cli?\",\n",
+      "    \"reply\": \"You can use the following Azure CLI command to view the quotas for your Machine Learning workspace:\\n```\\naz ml workspace compute show-quota --name <name> --resource-group <resource-group> [--compute-target <compute-target>] [--ids]\\n```\\n\\nReplace `<name>` with the name of the Machine Learning workspace and `<resource-group>` with the resource group that contains the workspace. You can also add `--compute-target` and `--ids` options if you have specific requirements for viewing compute targets or identity information.\",\n",
+      "    \"ungrounded_facts\": [],\n",
+      "    \"rating_out_of_10\": 0\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "!python src/langchain/groundedness.py --conversation_context data/amldocs/groundedness/conversation_context.json"
    ]
