--- a/langchain_notes.ipynb
+++ b/langchain_notes.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,12 +60,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USING API_BASE: \n",
-      "https://aoai.openai.azure.com/\n",
       "\n",
-      "Q: What did the large language model say when it was asked to summarize its own data?\n",
+      "Q: What did the large language model say when it was asked to tell a joke?\n",
       "\n",
-      "A: \"It's too long, I can't even.\"\n"
+      "A: I'm sorry, I'm still learning how to be funny.\n"
      ]
     }
    ],
